--- a/theory.html
+++ b/theory.html
@@ -7,7 +7,7 @@
 </head>
 <body class="background">
     <div class="container">
-        <img src="images/logo.png" class="logo" alt="CU Updates Logo">
+        <img src="images/logo.png" class="logo">
         <h1>Theory Internal Marks Calculator</h1>
         <form id="theoryForm">
             <div class="input-container">
@@ -26,3 +26,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
