Fix HTML formatting and add missing newline

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body class="background">
     <div class="container">
-        <img src="images/logo.png" class="logo" alt="CU Updates Logo">
+        <img src="images/logo.png" class="logo">
         <h1>Internal Marks Calculator</h1>
         <div class="button-container">
             <a href="hybrid.html" class="btn">Hybrid</a>
@@ -16,4 +16,5 @@
         <p class="footer" style="margin-top: 50px;">Created by Subhayu</p>
     </div>
 </body>
+
 </html>
