--- a/hybrid.html
+++ b/hybrid.html
@@ -7,7 +7,7 @@
 </head>
 <body class="background">
     <div class="container">
-        <img src="images/logo.png" class="logo" alt="CU Updates Logo">
+        <img src="images/logo1.png" class="logo">
         <h1>Hybrid Internal Marks Calculator</h1>
         <form id="hybridForm">
             <div class="input-container">
@@ -39,3 +39,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
