Change logo image source in index.html
Updated logo image source in the HTML file.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body class="background">
     <div class="container">
-        <img src="images/logo.png" class="logo">
+        <img src="images/logo1.png" class="logo">
         <h1>Internal Marks Calculator</h1>
         <div class="button-container">
             <a href="hybrid.html" class="btn">Hybrid</a>
@@ -18,3 +18,4 @@
 </body>
 
 </html>
+
